--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -4,7 +4,10 @@
     <div class="col-md-6 offset-md-3">
       <nav class="navbar navbar-dark bg-dark">
         <%= link_to 'Home', welcome_index_path %>  <br>
-        <%= link_to 'Add Supplier', new_finance_path %>
+        <%= link_to 'Add Supplier', new_finance_path %><br>
+        <p align="center">
+          Note: Enter Supplier information as SubAccount detail on Payment (paystack) Dashboard.
+        </p>
       </nav> 
     </div>
   </div>
